# avbot

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  COPYING.Commercial  ChangeLog  README.md  auto_welcome.hpp  avbot.conf.example  avbot.manifest  avbot.qrc  avbot.rc.in  avbot.service.in  avbot_log_search.cpp  avbotpch.h  backtrace.cpp  botctl.cpp  botctl.hpp  cpacksettings.cmake  cxx11.cmake  dpi.manifest  index.html  index.md  input.cpp  input.hpp  main.cpp  minidump.cpp  params.json  resource.h  sound.cpp  sound_alsa.cpp  sound_dumy.cpp  spirit.cpp  tweakvcflasgs.cmake  ui_decoder.hpp  version.c.in
avboost/example/: CMakeLists.txt  autoproxy.cpp  multi_proxychain.cpp
extension/: CMakeLists.txt  README.md  avbot.py  bulletin.cpp  bulletin.hpp  dllextension.hpp  exchangerate.hpp  extension.cpp  extension.hpp  html.hpp  iplocation.hpp  joke.cpp  joke.hpp  metalprice.hpp  pythonscriptengine.cpp  pythonscriptengine.hpp  staticcontent.cpp  staticcontent.hpp  stockprice.hpp  urlpreview.cpp  urlpreview.hpp
extension/luascript/: CMakeLists.txt  luascript.cpp  luascript.hpp
extension/luascript/libs/: main.lua
extension/luascript/libs/luascript/: TALK.lua  dnddice.lua  dnddice_detail.lua  fate.lua  fruit.lua  getlink.lua  help.lua  roll.lua  scp.lua  seventhsea.lua  tishen.lua  woddice.lua  zhan.lua
extension/luascript/luabind/examples/any_converter/: any_converter.cpp
extension/luascript/luabind/examples/cln/: cln_test.cpp
extension/luascript/luabind/examples/filesystem/: directory_iterator.hpp  filesystem.cpp
extension/luascript/luabind/examples/glut/: glut_bind.cpp
extension/luascript/luabind/examples/hello_world/: hello_world.cpp
extension/luascript/luabind/examples/intrusive_ptr/: intrusive_ptr.cpp
extension/luascript/luabind/examples/regexp/: regex_wrap.cpp
extension/luascript/luabind/luabind/: adopt_policy.hpp  back_reference.hpp  back_reference_fwd.hpp  class.hpp  class_info.hpp  config.hpp  container_policy.hpp  copy_policy.hpp  dependency_policy.hpp  discard_result_policy.hpp  error.hpp  exception_handler.hpp  from_stack.hpp  function.hpp  get_main_thread.hpp  get_pointer.hpp  handle.hpp  iterator_policy.hpp  lua_include.hpp  make_function.hpp  nil.hpp  object.hpp  open.hpp  operator.hpp  out_value_policy.hpp  raw_policy.hpp  return_reference_to_policy.hpp  scope.hpp  shared_ptr_converter.hpp  tag_function.hpp  typeid.hpp  value_wrapper.hpp  version.hpp  weak_ref.hpp  wrapper_base.hpp  yield_policy.hpp
extension/luascript/luabind/luabind/detail/: calc_arity.hpp  call.hpp  call_function.hpp  call_member.hpp  call_operator_iterate.hpp  class_cache.hpp  class_registry.hpp  class_rep.hpp  compute_score.hpp  constructor.hpp  conversion_storage.hpp  convert_to_lua.hpp  debug.hpp  decorate_type.hpp  open.hpp  (+27 more)
extension/luascript/luabind/src/: class.cpp  class_info.cpp  class_registry.cpp  class_rep.cpp  create_class.cpp  error.cpp  exception_handler.cpp  function.cpp  inheritance.cpp  link_compatibility.cpp  object_rep.cpp  open.cpp  pcall.cpp  scope.cpp  stack_content_by_name.cpp  weak_ref.cpp  wrapper_base.cpp
extension/luascript/luabind/test/: benchmark.cpp  main.cpp  test.hpp  test_abstract_base.cpp  test_adopt.cpp  test_adopt_wrapper.cpp  test_attributes.cpp  test_automatic_smart_ptr.cpp  test_back_reference.cpp  test_builtin_converters.cpp  test_class_info.cpp  test_collapse_converter.cpp  test_const.cpp  test_construction.cpp  test_create_in_thread.cpp  test_def_from_base.cpp  test_dynamic_type.cpp  test_exception_handlers.cpp  test_exceptions.cpp  test_extend_class_in_lua.cpp  test_free_functions.cpp  test_has_get_pointer.cpp  test_held_type.cpp  test_implicit_cast.cpp  test_implicit_raw.cpp  test_iterator.cpp  test_lua_classes.cpp  test_null_pointer.cpp  test_object.cpp  test_operators.cpp  test_policies.cpp  test_private_destructors.cpp  test_properties.cpp  test_scope.cpp  test_separation.cpp  test_set_instance_value.cpp  test_shadow.cpp  test_shared_ptr.cpp  test_simple_class.cpp  test_smart_ptr_attributes.cpp  (+9 more)
extension/luascript/msvc_x64/: lua.def  lua51.exp  lua51.lib
extension/luascript/msvc_x86/: lua51.def  lua51.exp  lua51.lib
libavbot/: CMakeLists.txt  avaccount.hpp  avbot.cpp  avbot.hpp  avchannel.cpp  avchannel.hpp
protocols/libirc/: CMakeLists.txt  test.cpp
protocols/libirc/include/: irc.hpp
protocols/libirc/src/: irc.cpp
protocols/libmailexchange/: CMakeLists.txt  internet_mail_format.hpp  mx.hpp  pop3.hpp  pop3test.cpp  smtp.hpp  smtptest.cpp
protocols/libwebqq/: CMakeLists.txt  encrypt.js
protocols/libwebqq/include/libwebqq/: error_code.hpp  webqq.hpp
protocols/libwebqq/js/: comm.js  compat.js  md.js  mq.js  test.js
protocols/libwebqq/src/: error_code.cpp  webqq.cpp
protocols/libwebqq/src/impl/: buddy_mgr.cpp  buddy_mgr.hpp  constant.hpp  cookie_mgr.hpp  group_message_sender.hpp  process_group_msg.hpp  tea.cpp  tea.hpp  webqq_buddy_info.hpp  webqq_calljs.cpp  webqq_calljs.hpp  webqq_check_login.hpp  webqq_face.cpp  webqq_group_list.hpp  webqq_group_member.hpp  webqq_group_qqnumber.hpp  webqq_hash.cpp  webqq_hash.hpp  webqq_impl.cpp  webqq_impl.hpp  webqq_keepalive.hpp  webqq_login.cpp  webqq_login.hpp  webqq_loop.cpp  webqq_loop.hpp  webqq_poll_message.hpp  webqq_send_offfile.hpp  webqq_status.hpp  webqq_verify_image.hpp  webqq_vfwebqq.hpp
protocols/libxmpp/: CMakeLists.txt
protocols/libxmpp/include/libxmpp/: xmpp.hpp
protocols/libxmpp/src/: test.cpp  xmpp.cpp  xmpp_impl.cpp  xmpp_impl.hpp
protocols/libxmpp/src/gloox/: CMakeLists.txt  Makefile.in  config.h.unix.in
rpc/: CMakeLists.txt  avbotrpc_adaptor.cpp  avbotrpc_adaptor.h  dbusrpc.cpp  dbusrpc.hpp  org.avplayer.avbot.xml  server.cpp  server.hpp
ui/: CMakeLists.txt  uifactory.cpp
ui/include/: avbotui.hpp
ui/src/: avbotui.cpp
ui/src/cli/: CMakeLists.txt  avbotcli.cpp  avbotcli.hpp
ui/src/qt-gui/: CMakeLists.txt  avbot.qrc  avbotqtui_impl.cpp  avbotqtui_impl.hpp  qcenteredimageview.hpp  qtgui.cpp  qtgui.hpp  vc_input_dialog.cpp  vc_input_dialog.hpp  vc_input_dialog.ui
ui/src/win32-gui/: CMakeLists.txt  win32.cpp
(+286 files in other folders)
